# Chess--

./: .gitignore  CMakeLists.txt  board.txt  check_moves.py  myMoves.txt  notes.md  stockfish.txt  temp1  temp2
src/: Board.cpp  Board.hpp  Move.cpp  Move.hpp  MoveGenerator.cpp  MoveGenerator.hpp  Piece.cpp  Piece.hpp  main.cpp
src/MoveGeneration/: DiagonalMoveGeneration.cpp  KingMoveGeneration.cpp  KnightMoveGeneration.cpp  PawnMoveGeneration.cpp  SlidingMoveGeneration.cpp  StraightMoveGeneration.cpp
